Shipping view does not break if configuration is not good

--- a/view/adminhtml/templates/tracking/form.phtml
+++ b/view/adminhtml/templates/tracking/form.phtml
@@ -11,7 +11,7 @@
 $order = $block->getShipment()->getOrder();
 ?>
 <?= $block->getChildHtml('order_info'); ?>
-<section class="admin__page-section order-shipment-billing-shipping">lajna
+<section class="admin__page-section order-shipment-billing-shipping">
     <div class="admin__page-section-title">
         <span class="title"><?= $block->escapeHtml(__('Payment &amp; Shipping Method')); ?></span>
     </div>
