--- a/view/adminhtml/templates/tracking/form.phtml
+++ b/view/adminhtml/templates/tracking/form.phtml
@@ -8,7 +8,7 @@ $order = $block->getOrder();
     <button id="oxl-tracking-status" type="button" class="action action-advanced-reports" 
         data-index="analytics-service-link" 
         title="Generate Waybill" 
-        onclick="popWin('<?= $block->escapeUrl($this->helper(\Oxl\Delivery\Helper\Data::class)->getWaybillPopupUrl($order->getId())); ?>','trackshipment','width=800,height=600,resizable=yes,scrollbars=yes')"
+        onclick="popWin('<?= $block->escapeUrl($block->getWaybillPopupUrl()); ?>','trackshipment','width=800,height=600,resizable=yes,scrollbars=yes')"
         data-ui-id="oxl-tracking-status">
         <span><?= $block->escapeHtml(__('Print')); ?></span>
     </button>
