Send proper data to econt iframe instead of undefined

--- a/view/frontend/templates/modal.phtml
+++ b/view/frontend/templates/modal.phtml
@@ -1,3 +1,6 @@
+<?php
+/** @var \Magento\Framework\Escaper $escaper */
+?>
 <div id="meee">
     <div id="econt-iframe-modal">
         <div id="place_iframe_here" class="content"></div>
@@ -11,7 +14,7 @@
     {
         "*": {
             "Oxl_Delivery/js/view/cms-block": {
-                "AjaxUrl": "<?php echo $ajaxurl; ?>"
+                "AjaxUrl": "<?= $escaper->escapeHtml($ajaxurl); ?>"
             }
         }
     }
