--- a/view/adminhtml/templates/tracking/tracking_info.phtml
+++ b/view/adminhtml/templates/tracking/tracking_info.phtml
@@ -175,7 +175,7 @@ require([
                 title="Generate Waybill" 
                 onclick="oxlTrackingInfo.loadModal()" 
                 data-ui-id="oxl-tracking-status">
-                <span>Generate</span>
+                <span>Generate with Econt</span>
             </button>
         </div>
         <button id="oxl_check_status" title="Check Tracking Status" type="button" class="action-default scalable" onclick="oxlTrackingInfo.check()" data-ui-id="oxl-check-tracking-status">
