--- a/view/adminhtml/layout/adminhtml_order_shipment_new.xml
+++ b/view/adminhtml/layout/adminhtml_order_shipment_new.xml
@@ -9,16 +9,12 @@
     <body>
         <referenceContainer name="extra_shipment_info">
             <container name="oxl.delivery.tracking" htmlTag="div" htmlClass="sidebar sidebar-additional" before="-">
-                <block class="Oxl\Delivery\Block\Adminhtml\Shipping\OxlTracking" 
+                <block class="Oxl\Delivery\Block\Adminhtml\Shipping\OxlGenerateWaybill" 
                     as="econt.trackingInfo" 
                     name="oxl_tracking_info" 
                     template="Oxl_Delivery::tracking/tracking_info.phtml"  
                     before="-">                
                 </block>
-                <!-- <arguments>
-                    <argument name="title" xsi:type="string" translate="false">Генерирай етикет</argument>
-                    <argument name="css_class" xsi:type="string">econt-waybill</argument>
-                </arguments> -->
             </container>        
         </referenceContainer>
     </body>
