--- a/view/adminhtml/templates/tracking/form.phtml
+++ b/view/adminhtml/templates/tracking/form.phtml
@@ -5,6 +5,9 @@
 $order = $block->getOrder();
 ?>
 <div class="dashboard-advanced-reports-actions">
+    <?php if ($block->getWaybillPopupUrl() === null): ?>
+        <span class="title"><?= /* @escapeNotVerified */ __('No waybill available') ?></span>
+    <?php else: ?>
     <button id="oxl-tracking-status" type="button" class="action action-advanced-reports" 
         data-index="analytics-service-link" 
         title="Generate Waybill" 
@@ -12,4 +15,5 @@ $order = $block->getOrder();
         data-ui-id="oxl-tracking-status">
         <span><?= $block->escapeHtml(__('Print')); ?></span>
     </button>
+    <?php endif; ?>
 </div>
