--- a/view/adminhtml/layout/adminhtml_order_shipment_view.xml
+++ b/view/adminhtml/layout/adminhtml_order_shipment_view.xml
@@ -7,7 +7,7 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="content">
+        <referenceContainer name="extra_shipment_info">
             <block class="Oxl\Delivery\Block\Adminhtml\Shipping\OxlTracking" 
                 name="econt_delivery_tracking" 
                 template="Oxl_Delivery::tracking/form.phtml" 
