Fix code standards issues

--- a/view/adminhtml/templates/order/view/info.phtml
+++ b/view/adminhtml/templates/order/view/info.phtml
@@ -1,10 +1,9 @@
-<?php
-// phpcs:disable Generic.Files.LineLength.TooLong
-?>
 <?php /** @var $block \Oxl\Delivery\Block\Adminhtml\Order\AbstractOrder */ ?>
-<?php $order = $block->getOrder() ?>
-<?php if ($order->getIsVirtual()): return '';
-endif; ?>
+<?php /** @var $escaper \Magento\Framework\Escaper */ ?>
+<?php
+$order = $block->getOrder();
+$popupUrl = $block->helper(\Oxl\Delivery\Helper\Data::class)->getTrackingPopupUrl($order);
+?>
 
 <?php /* Shipping Method */ ?>
 <div class="admin__page-section-item order-shipping-method">
@@ -15,15 +14,12 @@ endif; ?>
         <?php  if ($order->getTracksCollection()->count()): ?>
             <?php if ($order->getShippingMethod() === 'econtdelivery_econtdelivery'): ?>
                 <p>
-                    <a href="#" id="linkId" onclick="popWin('<?= $escaper->escapeHtml($block->helper(\Oxl\Delivery\Helper\Data::class)->getTrackingPopupUrl($order)) ?>','trackshipment','width=800,height=600,resizable=yes,scrollbars=yes')"
+                    <a href="#" id="linkId" onclick="popWin(
+                    '<?= $escaper->escapeHtml($popupUrl) ?>',
+                    'trackshipment',
+                        'width=800,height=600,resizable=yes,scrollbars=yes')"
                     title="<?= $escaper->escapeHtml(__('Track Order')) ?>">
                         <?= $escaper->escapeHtml(__('Track Order')) ?>
-                    </a>
-                </p>
-            <?php else: ?>
-                <p>
-                    <a href="#" id="linkId" onclick="popWin('<?= $escaper->escapeHtml($block->helper(\Oxl\Delivery\Helper\Data::class)->getTrackingPopupUrlBySalesModel($order)) ?>','trackorder','width=800,height=600,resizable=yes,scrollbars=yes')"
-                       title="<?= $escaper->escapeHtml(__('Track Order')) ?>"><?= $escaper->escapeHtml(__('Track Order')) ?>
                     </a>
                 </p>
             <?php endif; ?>
@@ -38,8 +34,9 @@ endif; ?>
             <?php endif; ?>
             <?php $_incl = $block->displayShippingPriceInclTax($order); ?>
 
-            <?= $_excl // phpcs:disable ?>
-            <?php if ($block->helper(Magento\Tax\Helper\Data::class)->displayShippingBothPrices() && $_incl != $_excl): ?>
+            <?= $escaper->escapeHtml($_excl); ?>
+            <?php if ($block->helper(Magento\Tax\Helper\Data::class)->displayShippingBothPrices()
+                && $_incl != $_excl): ?>
                 (<?= $escaper->escapeHtml(__('Incl. Tax')) ?> <?= $escaper->escapeHtml($_incl) ?>)
             <?php endif; ?>
         <?php else: ?>
