--- a/view/adminhtml/layout/sales_order_view.xml
+++ b/view/adminhtml/layout/sales_order_view.xml
@@ -8,7 +8,11 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="order_tab_info">
-            <block class="Oxl\Delivery\Block\Adminhtml\Order\AbstractOrder" name="order_shipping_view" template="Oxl_Delivery::order/view/info.phtml"/>
+            <block 
+                class="Oxl\Delivery\Block\Adminhtml\Order\AbstractOrder" 
+                name="order_shipping_view" 
+                template="Oxl_Delivery::order/view/info.phtml"
+            />
         </referenceBlock>
     </body>
 </page>
