Move texts to i18n file

--- a/view/frontend/web/template/shipping/additional-block.html
+++ b/view/frontend/web/template/shipping/additional-block.html
@@ -1,5 +1,5 @@
 <div class="checkout-block" id="block-custom" style="display: none">
     <button type="button" class="button action primary" id="econtGetModalData">
-        <span data-bind="i18n: 'Калкулирай цена'"></span>
+        <span data-bind="i18n: 'Calculate price'"></span>
     </button>
 </div>
